font size changed to 14px for main and 11px for captions on canvases

--- a/test/index.html
+++ b/test/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-2">
                         <div class="row">
-                            <div class="lead">
+                            <div class="lead caption">
                                 <p>something</p>
                             </div>
                         </div>
@@ -104,8 +104,8 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-2">
                         <div class="row">
-                            <div class="lead">
-                                <p>something</p>
+                            <div class="lead caption">
+                                <p>Changing x-height on an already existing font Roboto.</p>
                             </div>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-2">
                         <div class="row">
-                            <div class="lead">
+                            <div class="lead caption">
                                 <p>something</p>
                             </div>
                         </div>
