changes in layout and canvases, more size, new font for first glyph and e.tc

--- a/test/index.html
+++ b/test/index.html
@@ -54,11 +54,11 @@
                     <div class="col-xs-12 col-sm-6 col-md-12" style="width: 760px">
                         <div class="row">
                                 <div id="glyphs"></div>
-                                <div class="col-md-4">weight:</div>
+                                <div class="col-md-1">weight:</div>
                                 <div class="col-md-5">
                                     <input id="sliderAB" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="width:250px;">
                                 </div>
-                                <div class="col-md-3"><span id="sliderABValue">0.2</span></div>
+                                <div class="col-md-1"><span id="sliderABValue">0.2</span></div>
                                 <div class="lead col-md-11" style="text-align:left">
                                 <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tellus nunc. Sed a massa ut massa pulvinar venenatis nec sit amet mi. Donec nec dapibus arcu, vel auctor urna. Nullam lacus ligula, volutpat id eros interdum, sodales blandit lectus. Fusce sit amet ultricies quam. Fusce tempor arcu at est vehicula, eu consectetur dui volutpat. Nam nulla lacus, laoreet sed magna id, egestas elementum metus. Quisque ac lectus ac lectus blandit laoreet nec vel elit. Vivamus at suscipit leo. Vestibulum semper eros erat. Proin eget hendrerit erat, quis cursus dolor. Quisque ultricies erat leo.
@@ -81,16 +81,16 @@
                     <div class="col-xs-12 col-sm-6 col-md-12" style="width: 760px">
                         <div class="row">
                             <div id="glyphsWord"></div>
-                            <div class="col-md-4">weight:</div>
-                            <div class="col-md-5">
+                            <div class="col-md-1">weight:</div>
+                            <div class="col-md-4">
                                 <input id="sliderABWord" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="width:250px;">
                             </div>
-                            <div class="col-md-3"><span id="sliderABWordValue">0.2</span></div>
-                            <div class="col-md-4">space:</div>
-                            <div class="col-md-5">
+                            <div class="col-md-1"><span id="sliderABWordValue">0.2</span></div>
+                            <div class="col-md-1">space:</div>
+                            <div class="col-md-4">
                                 <input id="sliderACWord" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="width:250px;">
                             </div>
-                            <div class="col-md-3"><span id="sliderADWordValue">0.2</span></div>
+                            <div class="col-md-1"><span id="sliderADWordValue">0.2</span></div>
                             <div class="lead col-md-11" style="text-align:left">
                                 <p>
 
@@ -114,16 +114,16 @@
                     <div class="col-xs-12 col-sm-6 col-md-12" style="width: 760px">
                         <div class="row">
                             <div id="glyphsSentence"></div>
-                            <div class="col-md-4">weight:</div>
-                            <div class="col-md-5">
+                            <div class="col-md-1">weight:</div>
+                            <div class="col-md-4">
                                 <input id="sliderABSentence" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="width:250px;">
                             </div>
-                            <div class="col-md-3"><span id="sliderABSentenceValue">0.2</span></div>
-                            <div class="col-md-4">space:</div>
-                            <div class="col-md-5">
+                            <div class="col-md-1"><span id="sliderABSentenceValue">0.2</span></div>
+                            <div class="col-md-1">space:</div>
+                            <div class="col-md-4">
                                 <input id="sliderACSentence" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="width:250px;">
                             </div>
-                            <div class="col-md-3"><span id="sliderACSentenceValue">0.2</span></div>
+                            <div class="col-md-1"><span id="sliderACSentenceValue">0.2</span></div>
                             <!--<div class="col-md-4">x-height:</div>-->
                             <!--<div class="col-md-5">-->
                                 <!--<input id="sliderADSentence" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="width:250px;">-->
@@ -148,6 +148,34 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-12" style="width: 760px">
+                        <div class="row">
+                            <div id="glyphsWordHeight"></div>
+                            <div class="col-md-2">x-height:</div>
+                            <div class="col-md-4">
+                                <input id="sliderABWordHeight" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="width:250px;">
+                            </div>
+                            <div class="col-md-1"><span id="sliderABWordHeightValue">0.2</span></div>
+                            <div class="lead col-md-11" style="text-align:left">
+                                <p>
+
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tellus nunc. Sed a massa ut massa pulvinar venenatis nec sit amet mi. Donec nec dapibus arcu, vel auctor urna. Nullam lacus ligula, volutpat id eros interdum, sodales blandit lectus. Fusce sit amet ultricies quam. Fusce tempor arcu at est vehicula, eu consectetur dui volutpat. Nam nulla lacus, laoreet sed magna id, egestas elementum metus. Quisque ac lectus ac lectus blandit laoreet nec vel elit. Vivamus at suscipit leo. Vestibulum semper eros erat. Proin eget hendrerit erat, quis cursus dolor. Quisque ultricies erat leo.
+                                </p>
+                                <p>
+                                    Suspendisse nec leo eget mi pretium tincidunt ac at tortor. Morbi iaculis, erat ac aliquam lobortis, velit libero scelerisque justo, eget sagittis tellus quam vel dolor. Nullam rutrum elementum sapien sed tristique. Proin at tempus dolor, et aliquam est. Praesent vitae sollicitudin eros. Suspendisse interdum mi sapien, quis porta neque luctus vel. Nulla tellus metus, laoreet eget metus sagittis, posuere volutpat eros. Nam eu arcu a metus commodo porta.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-2">
+                        <div class="row">
+                            <div class="lead caption">
+                                <p>Changing x-height on an already existing font Roboto.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -168,9 +196,9 @@ function formatter(value) {
 
 $(document).ready(function(){
     var fonts = [
-        'fonts/Roboto-Regular.otf',
-        'fonts/Roboto-Bold.otf',
-        'fonts/Roboto-Regular-space.otf'
+        'fonts/RobotoSlab_Thin.otf',
+        'fonts/RobotoSlab_Bold.otf',
+        'fonts/RobotoSlab_Thin.otf'
     ];
 
     var sliderABValue = $('#sliderABValue');
@@ -178,13 +206,28 @@ $(document).ready(function(){
     var sliderACWordValue = $('#sliderACWordValue');
     var sliderABSentenceValue = $('#sliderABSentenceValue');
     var sliderACSentenceValue = $('#sliderACSentenceValue');
+    var sliderABWordHeightValue = $('#sliderABWordHeightValue')
 
 
     var instancesGlyph = Instances(fonts, {text: 'a', canvas: '#glyphs',
-                                           fontSize: 140, lineHeight: 160});
+                                           fontSize: 400, lineHeight: 215});
 
-   var instancesWord = Instances(fonts, {text: 'Hanna', canvas: '#glyphsWord',
+    var wordFonts = [
+        'fonts/Roboto-Regular.otf',
+        'fonts/Roboto-Bold.otf',
+        'fonts/Roboto-Regular-space.otf'
+    ];
+   var instancesWord = Instances(wordFonts, {text: 'Hanna', canvas: '#glyphsWord',
                                          fontSize: 80, lineHeight: 100});
+
+    var heightFonts = [
+        'fonts/Roboto-Regular-x-low.otf',
+        'fonts/Roboto-Regular-x-high.otf',
+        'fonts/Roboto-Regular-x-high.otf'
+    ];
+
+    var instancesWordHeight = Instances(heightFonts, {text: 'Hanna', canvas: '#glyphsWordHeight',
+        fontSize: 80, lineHeight: 110});
 
     var parafonts = [
         'fonts/RobotoSlab_Thin.otf',
@@ -192,9 +235,9 @@ $(document).ready(function(){
         'fonts/RobotoSlab_Thin_Space.otf'
     ];
 
-    var instancesSentance = Instances(parafonts, {linebreaks: true, text: 'Donald Ervin Knuth (born January 10, 1938) is an American computer scientist, mathematician, and Professor Emeritus at Stanford University. He is the author of the multi-volume work The Art of Computer Programming. Knuth has been called the "father" of the analysis of algorithms. He contributed to the development of the rigorous analysis of the computational complexity of algorithms and systematized formal mathematical techniques for it. In the process he also popularized the asymptotic notation. In addition to fundamental contributions in several branches of theoretical computer science, Knuth is the creator of the TeX computer typesetting system, the related METAFONT font definition language and rendering system, and the Computer Modern family of typefaces. As a writer and scholar, Knuth created the WEB and CWEB computer programming systems designed to encourage and facilitate literate programming, and designed the MIX/MMIX instruction set architectures. As a member of the academic and scientific community, Knuth is strongly opposed to the policy of granting software patents. He has expressed his disagreement directly to both the United States Patent and Trademark Office and European Patent Organization.',
+    var instancesSentance = Instances(parafonts, {linebreaks: true, text: 'Donald Ervin Knuth (born January 10, 1938) is an American computer scientist, mathematician, and Professor Emeritus at Stanford University. He is the author of the multi-volume work The Art of Computer Programming. Knuth has been called the "father" of the analysis of algorithms. He contributed to the development of the rigorous analysis of the computational complexity of algorithms and systematized formal mathematical techniques for it. In the process he also popularized the asymptotic notation. In addition to fundamental contributions in several branches of theoretical computer science, Knuth is the creator of the TeX computer typesetting system, the related METAFONT font definition language and rendering system, and the Computer Modern family of typefaces.',
         canvas: '#glyphsSentence', fontSize: 20, lineHeight: 32,
-                                   width: 690, height: 600});
+                                   width: 690, height: 400});
 
     // $(window).on('resize', function() {
     //     instancesSentance.width = $('.col-xs-12 .col-sm-6 .col-md-2').outerWidth();
@@ -231,6 +274,12 @@ $(document).ready(function(){
         instancesSentance.interpolationValueAC = e.value;
         sliderACSentenceValue.text((e.value).toFixed(2));
         instancesSentance.interpolate();
+    });
+
+    $('#sliderABWordHeight').slider({formater: formatter}).on('slide', function(e){
+        instancesWordHeight.interpolationValueAB = e.value;
+        sliderABWordHeightValue.text((e.value).toFixed(2));
+        instancesWordHeight.interpolate();
     });
 
 //    $('#sliderADSentence').slider({formater: formatter}).on('slide', function(e){
