text for glyph caption, exception for firt caption

--- a/test/index.html
+++ b/test/index.html
@@ -71,8 +71,8 @@
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-2">
                         <div class="row">
-                            <div class="lead caption">
-                                <p>something</p>
+                            <div class="lead caption" style="padding-top: 10px;">
+                                <p>Changing weight on an already existing font Roboto.</p>
                             </div>
                         </div>
                     </div>
