--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Metapolator: Design typeface families</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="slider.css"/>
     <link rel="stylesheet" type="text/css" href="demo.css"/>
@@ -61,10 +61,13 @@
                                 <div class="col-md-1"><span id="sliderABValue">0.2</span></div>
                                 <div class="lead col-md-11" style="text-align:left">
                                 <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tellus nunc. Sed a massa ut massa pulvinar venenatis nec sit amet mi. Donec nec dapibus arcu, vel auctor urna. Nullam lacus ligula, volutpat id eros interdum, sodales blandit lectus. Fusce sit amet ultricies quam. Fusce tempor arcu at est vehicula, eu consectetur dui volutpat. Nam nulla lacus, laoreet sed magna id, egestas elementum metus. Quisque ac lectus ac lectus blandit laoreet nec vel elit. Vivamus at suscipit leo. Vestibulum semper eros erat. Proin eget hendrerit erat, quis cursus dolor. Quisque ultricies erat leo.
+                                Metapolator is a font editor for designing typeface families.
                                 </p>
                                 <p>
-                                Suspendisse nec leo eget mi pretium tincidunt ac at tortor. Morbi iaculis, erat ac aliquam lobortis, velit libero scelerisque justo, eget sagittis tellus quam vel dolor. Nullam rutrum elementum sapien sed tristique. Proin at tempus dolor, et aliquam est. Praesent vitae sollicitudin eros. Suspendisse interdum mi sapien, quis porta neque luctus vel. Nulla tellus metus, laoreet eget metus sagittis, posuere volutpat eros. Nam eu arcu a metus commodo porta.
+                                It provides a GUI for designing with UFO fonts and Metafont – a language for semi-algorithmic specification of typefaces. Metapolator was created out of the need to create large font families efficiently.
+                                </p>
+                                <p>
+                                For classical interpolation using multiple masters and axes, Metapolator can load normal UFO fonts (without any modifications) load and save into the UFO format and create new instances on the fly.
                                 </p>
                                 </div>
                         </div>
@@ -92,13 +95,14 @@
                             </div>
                             <div class="col-md-1"><span id="sliderADWordValue">0.2</span></div>
                             <div class="lead col-md-11" style="text-align:left">
-                                <p>
 
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tellus nunc. Sed a massa ut massa pulvinar venenatis nec sit amet mi. Donec nec dapibus arcu, vel auctor urna. Nullam lacus ligula, volutpat id eros interdum, sodales blandit lectus. Fusce sit amet ultricies quam. Fusce tempor arcu at est vehicula, eu consectetur dui volutpat. Nam nulla lacus, laoreet sed magna id, egestas elementum metus. Quisque ac lectus ac lectus blandit laoreet nec vel elit. Vivamus at suscipit leo. Vestibulum semper eros erat. Proin eget hendrerit erat, quis cursus dolor. Quisque ultricies erat leo.
+                                <p>
+                                To use the full potential of parametrising fonts, Metapolator can parse already existing fonts (such as PostScript Type 1 or OpenType). They need to be broken up into separate shapes resembling strokes and provide consistent counterpoints. In this process, a Metafont is produced by specifying the central skeleton of shapes – for which there are "pens" of different angles and widths along the skeleton. As the glyph shapes are defined through equations, they can be parametrised along axes such as aspect ratio, weight, slant, stroke width, contrast and so on.
                                 </p>
                                 <p>
-                                    Suspendisse nec leo eget mi pretium tincidunt ac at tortor. Morbi iaculis, erat ac aliquam lobortis, velit libero scelerisque justo, eget sagittis tellus quam vel dolor. Nullam rutrum elementum sapien sed tristique. Proin at tempus dolor, et aliquam est. Praesent vitae sollicitudin eros. Suspendisse interdum mi sapien, quis porta neque luctus vel. Nulla tellus metus, laoreet eget metus sagittis, posuere volutpat eros. Nam eu arcu a metus commodo porta.
+                                Furthermore instead of using prepared fonts it will be possible to enhance normal UFO fonts by adding parameters on request and only parametrise certain parts of a glyph.
                                 </p>
+
                             </div>
                         </div>
                     </div>
@@ -131,11 +135,7 @@
                             <!--<div class="col-md-3"><span id="sliderADSentenceValue">0.2</span></div>-->
                             <div class="lead col-md-11" style="text-align:left">
                                 <p>
-
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tellus nunc. Sed a massa ut massa pulvinar venenatis nec sit amet mi. Donec nec dapibus arcu, vel auctor urna. Nullam lacus ligula, volutpat id eros interdum, sodales blandit lectus. Fusce sit amet ultricies quam. Fusce tempor arcu at est vehicula, eu consectetur dui volutpat. Nam nulla lacus, laoreet sed magna id, egestas elementum metus. Quisque ac lectus ac lectus blandit laoreet nec vel elit. Vivamus at suscipit leo. Vestibulum semper eros erat. Proin eget hendrerit erat, quis cursus dolor. Quisque ultricies erat leo.
-                                </p>
-                                <p>
-                                    Suspendisse nec leo eget mi pretium tincidunt ac at tortor. Morbi iaculis, erat ac aliquam lobortis, velit libero scelerisque justo, eget sagittis tellus quam vel dolor. Nullam rutrum elementum sapien sed tristique. Proin at tempus dolor, et aliquam est. Praesent vitae sollicitudin eros. Suspendisse interdum mi sapien, quis porta neque luctus vel. Nulla tellus metus, laoreet eget metus sagittis, posuere volutpat eros. Nam eu arcu a metus commodo porta.
+                                Metapolator allows the designer to utilise Metafont without have to write any Metafont code.
                                 </p>
                             </div>
                         </div>
@@ -159,11 +159,7 @@
                             <div class="col-md-1"><span id="sliderABWordHeightValue">0.2</span></div>
                             <div class="lead col-md-11" style="text-align:left">
                                 <p>
-
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tellus nunc. Sed a massa ut massa pulvinar venenatis nec sit amet mi. Donec nec dapibus arcu, vel auctor urna. Nullam lacus ligula, volutpat id eros interdum, sodales blandit lectus. Fusce sit amet ultricies quam. Fusce tempor arcu at est vehicula, eu consectetur dui volutpat. Nam nulla lacus, laoreet sed magna id, egestas elementum metus. Quisque ac lectus ac lectus blandit laoreet nec vel elit. Vivamus at suscipit leo. Vestibulum semper eros erat. Proin eget hendrerit erat, quis cursus dolor. Quisque ultricies erat leo.
-                                </p>
-                                <p>
-                                    Suspendisse nec leo eget mi pretium tincidunt ac at tortor. Morbi iaculis, erat ac aliquam lobortis, velit libero scelerisque justo, eget sagittis tellus quam vel dolor. Nullam rutrum elementum sapien sed tristique. Proin at tempus dolor, et aliquam est. Praesent vitae sollicitudin eros. Suspendisse interdum mi sapien, quis porta neque luctus vel. Nulla tellus metus, laoreet eget metus sagittis, posuere volutpat eros. Nam eu arcu a metus commodo porta.
+                                    <a href="https://plus.google.com/communities/110027004108709154749">Join our community on Google+</a>
                                 </p>
                             </div>
                         </div>
