--- a/test/index.html
+++ b/test/index.html
@@ -40,10 +40,8 @@
                 <!--</div></li>-->
               <!--</ul>-->
               <ul class="col-md-2 masthead-nav">
-                <li><a href="http://github.com/metapolator/metapolator" title="Download"><span class="glyphicon glyphicon-circle-arrow-down"></span></a>   </li>
-                <li><a href="http://metapolator.com/about" title="About"><span class="glyphicon glyphicon-user"></span></a></li>
-                <li><a href="https://plus.google.com/u/0/communities/110027004108709154749" title="Google+"><span class="glyphicon glyphicon-globe"></span></a></li>
-                <li><a href="http://metapolator.com/atom.xml" title="Atom RSS"><span class="glyphicon glyphicon-send"></span></a></li>
+                <li><a href="http://github.com/metapolator/metapolator" title="Github"><span class="glyphicon glyphicon-github"></span></a>   </li>
+                <li><a href="https://plus.google.com/u/0/communities/110027004108709154749" title="Google+"><span class="glyphicon glyphicon-google-plus"></span></a></li>
               </ul>
             </div>
           </div>
@@ -74,7 +72,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-2">
                         <div class="row">
                             <div class="lead caption" style="padding-top: 10px;">
-                                <p>Changing weight on an already existing font Roboto.</p>
+                                <p>Explore font-weight in a conventionally designed typeface, Roboto Slab.</p>
                             </div>
                         </div>
                     </div>
@@ -93,22 +91,12 @@
                                 <input id="sliderACWord" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="width:250px;">
                             </div>
                             <div class="col-md-1"><span id="sliderADWordValue">0.2</span></div>
-                            <div class="lead col-md-11" style="text-align:left">
-
-                                <p>
-                                To use the full potential of parametrising fonts, Metapolator can parse already existing fonts (such as PostScript Type 1 or OpenType). They need to be broken up into separate shapes resembling strokes and provide consistent counterpoints. In this process, a Metafont is produced by specifying the central skeleton of shapes – for which there are "pens" of different angles and widths along the skeleton. As the glyph shapes are defined through equations, they can be parametrised along axes such as aspect ratio, weight, slant, stroke width, contrast and so on.
-                                </p>
-                                <p>
-                                Furthermore instead of using prepared fonts it will be possible to enhance normal UFO fonts by adding parameters on request and only parametrise certain parts of a glyph.
-                                </p>
-
-                            </div>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-2">
                         <div class="row">
                             <div class="lead caption">
-                                <p>Changing x-height on an already existing font Roboto.</p>
+                                <p>Explore 2 axes of variation, font-weight and letter-spacing, in Roboto.</p>
                             </div>
                         </div>
                     </div>
@@ -133,6 +121,14 @@
                             <!--</div>-->
                             <!--<div class="col-md-3"><span id="sliderADSentenceValue">0.2</span></div>-->
                             <div class="lead col-md-11" style="text-align:left">
+
+                                <p>
+                                To use the full potential of parametrising fonts, Metapolator can parse already existing fonts (such as PostScript Type 1 or OpenType). They need to be broken up into separate shapes resembling strokes and provide consistent counterpoints. In this process, a Metafont is produced by specifying the central skeleton of shapes – for which there are "pens" of different angles and widths along the skeleton. As the glyph shapes are defined through equations, they can be parametrised along axes such as aspect ratio, weight, slant, stroke width, contrast and so on.
+                                </p>
+                                <p>
+                                Furthermore instead of using prepared fonts it will be possible to enhance normal UFO fonts by adding parameters on request and only parametrise certain parts of a glyph.
+                                </p>
+
                                 <p>
                                 Metapolator allows the designer to utilise Metafont without have to write any Metafont code.
                                 </p>
@@ -142,7 +138,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-2">
                         <div class="row">
                             <div class="lead caption">
-                                <p>something</p>
+                                <p></p>
                             </div>
                         </div>
                     </div>
