--- a/test/index.html
+++ b/test/index.html
@@ -52,7 +52,7 @@
             <div class="col-md-offset-1">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-12" style="width: 760px">
-                        <div class="row">
+                        <div class="row" style="margin-top:20px">
                                 <div id="glyphs"></div>
                                 <div class="col-md-1">weight:</div>
                                 <div class="col-md-5">
