fix for header and aligning

--- a/test/index.html
+++ b/test/index.html
@@ -18,33 +18,33 @@
 <body>
 <div id="wrap">
     <div class="masthead clearfix">
-            <div class="inner">
-              <h1 class="col-md-3 masthead-brand">
-                <span style="font-family: 'Roboto', sans-serif; font-weight: 700;">META</span><!---
-                --><span style="font-family: 'Roboto', sans-serif; font-weight: 500;">PO</span><!---
-                --><span style="font-family: 'Roboto', sans-serif; font-weight: 300;">LATOR</span>
-            </h1>
-            <!-- Top center dropdown menu for selectiong action -->
-              <!--<ul class="col-md-5 col-md-offset-1 feature-nav">-->
-                <!--<li>What do you want to try?</li>-->
-                <!--<li>-->
-                <!--<div class="btn-group">-->
-                  <!--<select id="sliderPicker" class="btn-black" data-toggle="dropdown">&lt;!&ndash;-->
-                    <!--&ndash;&gt;changing x-height <span class="caret"></span>-->
-                    <!--<option value="#height">change x-height</option>-->
-                    <!--<option value="#weight">change weight</option>-->
-                    <!--<option value="#size">change size</option>-->
-                    <!--<option value="#space">change space</option>-->
-                    <!--<option value="#all">change all</option>-->
-                  <!--</select>-->
-                <!--</div></li>-->
-              <!--</ul>-->
-              <ul class="col-md-2 masthead-nav">
-                <li><a href="http://github.com/metapolator/metapolator" title="Github"><span class="glyphicon glyphicon-github"></span></a>   </li>
-                <li><a href="https://plus.google.com/u/0/communities/110027004108709154749" title="Google+"><span class="glyphicon glyphicon-google-plus"></span></a></li>
-              </ul>
-            </div>
-          </div>
+        <div class="inner">
+          <h1 class="masthead-brand">
+            <span style="font-family: 'Roboto', sans-serif; font-weight: 700;">META</span><span style="font-family: 'Roboto', sans-serif; font-weight: 500;">PO</span><span style="font-family: 'Roboto', sans-serif; font-weight: 300;">LATOR</span>
+          </h1>
+        <!-- Top center dropdown menu for selectiong action -->
+          <!--<ul class="col-md-5 col-md-offset-1 feature-nav">-->
+            <!--<li>What do you want to try?</li>-->
+            <!--<li>-->
+            <!--<div class="btn-group">-->
+              <!--<select id="sliderPicker" class="btn-black" data-toggle="dropdown">&lt;!&ndash;-->
+                <!--&ndash;&gt;changing x-height <span class="caret"></span>-->
+                <!--<option value="#height">change x-height</option>-->
+                <!--<option value="#weight">change weight</option>-->
+                <!--<option value="#size">change size</option>-->
+                <!--<option value="#space">change space</option>-->
+                <!--<option value="#all">change all</option>-->
+              <!--</select>-->
+            <!--</div></li>-->
+          <!--</ul>-->
+          <ul class="col-md-2 masthead-nav">
+            <li><a href="http://github.com/metapolator/metapolator" title="Github"><span class="glyphicon glyphicon-github"></span></a>   </li>
+            <li><a href="https://plus.google.com/u/0/communities/110027004108709154749" title="Google+"><span class="glyphicon glyphicon-google-plus"></span></a></li>
+          </ul>
+        </div>
+      </div>
+
+
         <div class="container-fluid">
             <div class="col-md-offset-1">
                 <div class="row">
