Update test copy

--- a/test/index.html
+++ b/test/index.html
@@ -58,13 +58,13 @@
                                 <div class="col-md-1"><span id="sliderABValue">0.2</span></div>
                                 <div class="lead col-md-11" style="text-align:left">
                                 <p>
-                                Metapolator is a font editor for designing typeface families.
+                                Metapolator is a font editor for designing typeface families. Many families vary only by weight, and even then only in a simple linear way, as above.
                                 </p>
                                 <p>
-                                It provides a GUI for designing with UFO fonts and Metafont – a language for semi-algorithmic specification of typefaces. Metapolator was created out of the need to create large font families efficiently.
+                                We wanted a way to draw fonts yet have the power of Metafont – a programming language for specifying typefaces with algorithms. 
                                 </p>
                                 <p>
-                                For classical interpolation using multiple masters and axes, Metapolator can load normal UFO fonts (without any modifications) load and save into the UFO format and create new instances on the fly.
+                                For classical interpolation using multiple masters and axes, Metapolator can load normal UFO fonts (without any modifications.) It can create new instances and save them in the UFO format or OTF/TTF binaries to use straight away.
                                 </p>
                                 </div>
                         </div>
