--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
 <div id="wrap">
     <div class="masthead clearfix">
         <div class="inner">
-          <h1 class="masthead-brand">
+          <h1 class="masthead-brand col-md-1">
             <span style="font-family: 'Roboto', sans-serif; font-weight: 700;">META</span><span style="font-family: 'Roboto', sans-serif; font-weight: 500;">PO</span><span style="font-family: 'Roboto', sans-serif; font-weight: 300;">LATOR</span>
           </h1>
         <!-- Top center dropdown menu for selectiong action -->
@@ -46,7 +46,7 @@
 
 
         <div class="container-fluid">
-            <div class="col-md-offset-1">
+            <div class="col-md-offset-3">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-12" style="width: 760px">
                         <div class="row" style="margin-top:20px">
